# japanese_law_id

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: lib.rs
